Bug 712109 - Implement chrome hang reporting on profiling branch. r=ehsan