tools/profiler/shared-libraries.h
@@ -36,17 +36,31 @@
  *
  * ***** END LICENSE BLOCK ***** */
 
+#include <algorithm>
 #include <vector>
 #include <string.h>
 #include <stdlib.h>
 #include <mozilla/StandardInteger.h>
+#include <nsID.h>
 
 class SharedLibrary {
 public:
-  SharedLibrary(unsigned long aStart, unsigned long aEnd, unsigned long aOffset, char *aName)
+
+  SharedLibrary(unsigned long aStart,
+                unsigned long aEnd,
+                unsigned long aOffset,
+#ifdef XP_WIN
+                nsID aPdbSignature,
+                unsigned long aPdbAge,
+#endif
+                char *aName)
     : mStart(aStart)
     , mEnd(aEnd)
     , mOffset(aOffset)
+#ifdef XP_WIN
+    , mPdbSignature(aPdbSignature)
+    , mPdbAge(aPdbAge)
+#endif
     , mName(strdup(aName))
   {}
 
@@ -54,6 +68,10 @@ public:
     : mStart(aEntry.mStart)
     , mEnd(aEntry.mEnd)
     , mOffset(aEntry.mOffset)
+#ifdef XP_WIN
+    , mPdbSignature(aEntry.mPdbSignature)
+    , mPdbAge(aEntry.mPdbAge)
+#endif
     , mName(strdup(aEntry.mName))
   {}
 
@@ -65,20 +83,43 @@ public:
     mStart = aEntry.mStart;
     mEnd = aEntry.mEnd;
     mOffset = aEntry.mOffset;
+#ifdef XP_WIN
+    mPdbSignature = aEntry.mPdbSignature;
+    mPdbAge = aEntry.mPdbAge;
+#endif
     if (mName)
       free(mName);
     mName = strdup(aEntry.mName);
     return *this;
   }
 
+  bool operator==(const SharedLibrary& other) const
+  {
+    bool equal = ((mStart == other.mStart) &&
+                  (mEnd == other.mEnd) &&
+                  (mOffset == other.mOffset) &&
+                  (mName && other.mName && (strcmp(mName, other.mName) == 0)));
+#ifdef XP_WIN
+    equal = equal &&
+            (mPdbSignature.Equals(other.mPdbSignature)) &&
+            (mPdbAge == other.mPdbAge);
+#endif
+    return equal;
+  }
+
   ~SharedLibrary()
   {
     free(mName);
+    mName = NULL;
   }
 
-  uintptr_t GetStart() { return mStart; }
-  uintptr_t GetEnd() { return mEnd; }
-  char* GetName() { return mName; }
+  uintptr_t GetStart() const { return mStart; }
+  uintptr_t GetEnd() const { return mEnd; }
+#ifdef XP_WIN
+  nsID GetPdbSignature() const { return mPdbSignature; }
+  uint32_t GetPdbAge() const { return mPdbAge; }
+#endif
+  char* GetName() const { return mName; }
 
 private:
   explicit SharedLibrary() {}
@@ -86,8 +127,19 @@ private:
   uintptr_t mStart;
   uintptr_t mEnd;
   uintptr_t mOffset;
+#ifdef XP_WIN
+  // Windows-specific PDB file identifiers
+  nsID mPdbSignature;
+  uint32_t mPdbAge;
+#endif
   char *mName;
 };
+
+static bool
+CompareAddresses(const SharedLibrary& first, const SharedLibrary& second)
+{
+  return first.GetStart() < second.GetStart();
+}
 
 class SharedLibraryInfo {
 public:
@@ -104,10 +156,34 @@ public:
     return mEntries[i];
   }
 
-  size_t GetSize()
+  // Removes items in the range [first, last)
+  // i.e. element at the "last" index is not removed
+  void RemoveEntries(size_t first, size_t last)
+  {
+    mEntries.erase(mEntries.begin() + first, mEntries.begin() + last);
+  }
+
+  bool Contains(const SharedLibrary& searchItem) const
+  {
+    return (mEntries.end() !=
+              std::find(mEntries.begin(), mEntries.end(), searchItem));
+  }
+
+  size_t GetSize() const
   {
     return mEntries.size();
   }
+
+  void SortByAddress()
+  {
+    std::sort(mEntries.begin(), mEntries.end(), CompareAddresses);
+  }
+
+  void Clear()
+  {
+    mEntries.clear();
+  }
+
 private:
   std::vector<SharedLibrary> mEntries;
 };
