xpcom/threads/HangMonitor.cpp
@@ -38,8 +38,10 @@
 #include "mozilla/HangMonitor.h"
 #include "mozilla/Monitor.h"
 #include "mozilla/Preferences.h"
+#include "mozilla/Telemetry.h"
 #include "nsXULAppAPI.h"
 #include "nsThreadUtils.h"
+#include "nsStackWalk.h"
 
 #ifdef MOZ_CRASHREPORTER
 #include "nsExceptionHandler.h"
@@ -47,6 +49,10 @@
 
 #ifdef XP_WIN
 #include <windows.h>
+#endif
+
+#if defined(MOZ_PROFILING) && defined(XP_WIN)
+  #define REPORT_CHROME_HANGS
 #endif
 
 namespace mozilla { namespace HangMonitor {
@@ -58,6 +64,8 @@ namespace mozilla { namespace HangMonitor {
 volatile bool gDebugDisableHangMonitor = false;
 
 const char kHangMonitorPrefName[] = "hangmonitor.timeout";
+
+const char kTelemetryPrefName[] = "toolkit.telemetry.enabled";
 
 // Monitor protects gShutdown and gTimeout, but not gTimestamp which rely on
 // being atomically set by the processor; synchronization doesn't really matter
@@ -76,11 +84,28 @@ bool gShutdown;
 // we're currently not processing events.
 volatile PRIntervalTime gTimestamp;
 
+#ifdef REPORT_CHROME_HANGS
+// Main thread ID used in reporting chrome hangs under Windows
+static HANDLE winMainThreadHandle = NULL;
+
+// Default timeout for reporting chrome hangs to Telemetry (10 seconds)
+static const PRInt32 DEFAULT_CHROME_HANG_INTERVAL = 10;
+#endif
+
 // PrefChangedFunc
 int
 PrefChanged(const char*, void*)
 {
   PRInt32 newval = Preferences::GetInt(kHangMonitorPrefName);
+#ifdef REPORT_CHROME_HANGS
+  // Monitor chrome hangs on the profiling branch if Telemetry enabled
+  if (newval == 0) {
+    PRBool telemetryEnabled = Preferences::GetBool(kTelemetryPrefName);
+    if (telemetryEnabled) {
+      newval = DEFAULT_CHROME_HANG_INTERVAL;
+    }
+  }
+#endif
   MonitorAutoLock lock(*gMonitor);
   if (newval != gTimeout) {
     gTimeout = newval;
@@ -111,6 +136,76 @@ Crash()
   NS_RUNTIMEABORT("HangMonitor triggered");
 }
 
+#ifdef REPORT_CHROME_HANGS
+static void
+ChromeStackWalker(void *aPC, void *aClosure)
+{
+  MOZ_ASSERT(aClosure);
+  Telemetry::HangStack *callStack =
+    reinterpret_cast< Telemetry::HangStack* >(aClosure);
+  callStack->AppendElement(reinterpret_cast<uintptr_t>(aPC));
+}
+
+static void
+GetChromeHangReport(Telemetry::HangStack &callStack, SharedLibraryInfo &moduleMap)
+{
+  MOZ_ASSERT(winMainThreadHandle);
+  moduleMap = SharedLibraryInfo::GetInfoForSelf();
+  moduleMap.SortByAddress();
+
+  DWORD ret = ::SuspendThread(winMainThreadHandle);
+  if (ret == -1) {
+    callStack.Clear();
+    moduleMap.Clear();
+    return;
+  }
+  NS_StackWalk(ChromeStackWalker, 0, &callStack,
+               reinterpret_cast<uintptr_t>(winMainThreadHandle));
+  ret = ::ResumeThread(winMainThreadHandle);
+  if (ret == -1) {
+    callStack.Clear();
+    moduleMap.Clear();
+    return;
+  }
+
+  // Remove all modules not referenced by a PC on the stack
+  Telemetry::HangStack sortedStack = callStack;
+  sortedStack.Sort();
+
+  size_t moduleIndex = 0;
+  size_t stackIndex = 0;
+  bool unreferencedModule = true;
+  while (stackIndex < sortedStack.Length() && moduleIndex < moduleMap.GetSize()) {
+    uintptr_t pc = sortedStack[stackIndex];
+    SharedLibrary& module = moduleMap.GetEntry(moduleIndex);
+    uintptr_t moduleStart = module.GetStart();
+    uintptr_t moduleEnd = module.GetEnd() - 1;
+    if (moduleStart <= pc && pc <= moduleEnd) {
+      // If the current PC is within the current module, mark module as used
+      unreferencedModule = false;
+      ++stackIndex;
+    } else if (pc > moduleEnd) {
+      if (unreferencedModule) {
+        // Remove module if no PCs within its address range
+        moduleMap.RemoveEntries(moduleIndex, moduleIndex + 1);
+      } else {
+        // Module was referenced on stack, but current PC belongs to later module
+        unreferencedModule = true;
+        ++moduleIndex;
+      }
+    } else {
+      // PC does not belong to any module
+      ++stackIndex;
+    }
+  }
+
+  // Clean up remaining unreferenced modules, i.e. module addresses > max(pc)
+  if (moduleIndex + 1 < moduleMap.GetSize()) {
+    moduleMap.RemoveEntries(moduleIndex + 1, moduleMap.GetSize());
+  }
+}
+#endif
+
 void
 ThreadMain(void*)
 {
@@ -121,6 +216,9 @@ ThreadMain(void*)
   // run twice to trigger hang protection.
   PRIntervalTime lastTimestamp = 0;
   int waitCount = 0;
+
+  Telemetry::HangStack hangStack;
+  SharedLibraryInfo hangModuleMap;
 
   while (true) {
     if (gShutdown) {
@@ -143,15 +241,27 @@ ThreadMain(void*)
         gTimeout > 0) {
       ++waitCount;
       if (waitCount == 2) {
+#ifdef REPORT_CHROME_HANGS
+        GetChromeHangReport(hangStack, hangModuleMap);
+#else
         PRInt32 delay =
           PRInt32(PR_IntervalToSeconds(now - timestamp));
         if (delay > gTimeout) {
           MonitorAutoUnlock unlock(*gMonitor);
           Crash();
         }
+#endif
       }
     }
     else {
+#ifdef REPORT_CHROME_HANGS
+      if (waitCount >= 2) {
+        PRUint32 hangDuration = PR_IntervalToSeconds(now - lastTimestamp);
+        Telemetry::RecordChromeHang(hangDuration, hangStack, hangModuleMap);
+        hangStack.Clear();
+        hangModuleMap.Clear();
+      }
+#endif
       lastTimestamp = timestamp;
       waitCount = 0;
     }
@@ -181,6 +291,14 @@ Startup()
 
   Preferences::RegisterCallback(PrefChanged, kHangMonitorPrefName, NULL);
   PrefChanged(NULL, NULL);
+
+#ifdef REPORT_CHROME_HANGS
+  Preferences::RegisterCallback(PrefChanged, kTelemetryPrefName, NULL);
+  winMainThreadHandle =
+    OpenThread(THREAD_ALL_ACCESS, FALSE, GetCurrentThreadId());
+  if (!winMainThreadHandle)
+    return;
+#endif
 
   // Don't actually start measuring hangs until we hit the main event loop.
   // This potentially misses a small class of really early startup hangs,
